# OrangeEngine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
OrangeEngineCore/: CMakeLists.txt
OrangeEngineCore/includes/OrangeEngineCore/: Application.h  Camera.h  Event.h  GameObject.h  Input.h  Keys.h  Voxel.h  Window.h  World.h
OrangeEngineCore/includes/OrangeEngineCore/Utils/: test.h
OrangeEngineCore/src/OrangeEngineCore/: Application.cpp  Camera.cpp  Input.cpp  ResourceLoader.cpp  ResourceLoader.h  Window.cpp  Window.h
OrangeEngineCore/src/OrangeEngineCore/GUI/: GUI.cpp  GUI.h
OrangeEngineCore/src/OrangeEngineCore/Graphics/OpenGL/: FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Renderer_OpenGL.cpp  Renderer_OpenGL.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
OrangeEngineCore/src/OrangeEngineCore/Graphics/OpenGL/Light/: DirectionalLight.cpp  DirectionalLight.h  LightMaterial.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
OrangeEngineCore/src/OrangeEngineCore/Modules/: UIModule.cpp  UIModule.h
OrangeEngineCore/src/OrangeEngineCore/Physics/: GameObject.cpp  PhysicsManager.cpp  PhysicsManager.h  Voxel.cpp  World.cpp
OrangeEngineCore/src/OrangeEngineCore/Utils/: test.cpp
OrangeEngineEditor/: CMakeLists.txt
OrangeEngineEditor/src/: main.cpp
assets/shaders/: object.fs  object.gs  object.vs
